<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lbl_etiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_etiqueta"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LayoutObjetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_objeto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto1" />

        <CheckBox
            android:id="@+id/cb_objeto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto2" />

        <CheckBox
            android:id="@+id/cb_objeto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto3" />

        <CheckBox
            android:id="@+id/cb_objeto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto4" />

        <CheckBox
            android:id="@+id/cb_objeto5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto5" />

        <CheckBox
            android:id="@+id/cb_objeto6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/cb_objeto6" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_Inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/seymour_one"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:text="@string/txt_Inicial"
        android:textColor="@color/black"
        android:textSize="40dp" />

    <Button
        android:id="@+id/btn_Borrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btn_borrar"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_Borrar" />

</LinearLayout>